# content_agent

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
config/audiences/: professional.yaml  school.yaml  university.yaml
config/prompts/ru/: analysis.system.txt  analysis.user.txt  critic.system.txt  critic.user.txt  generators.edu_material.txt  generators.explanation.txt  generators.summary.txt  generators.system.txt  illustrator.system.txt  illustrator.user.txt  planner.system.txt  planner.user.txt
dashboard/: app.py
projects/demo/data/sources/: photosynthesis.md
src/content_agents/: config.py  factories.py  job_manager.py  logger.py  main.py  models.py  ports.py  prompts.py  tracing.py  utils.py
src/content_agents/agents/: analysis.py  critic.py  finalizer.py  generators.py  illustrator.py  ingestion.py  planner.py
src/content_agents/graph/: state.py  workflow.py
src/content_agents/services/embedding/: langchain_adapter.py  mock.py  yandex_emb.py
src/content_agents/services/image/: __init__.py  mock.py  yandex_art.py
src/content_agents/services/llm/: mock.py  yandex_gpt.py
src/content_agents/services/loaders/: file_loader.py
src/content_agents/services/renderers/: _common.py  html.py  markdown.py  slides.py
src/content_agents/services/vectorstore/: faiss_store.py  memory.py
tests/: test_pipeline.py
