[project]
name = "education-content-agents"
version = "0.1.0"
description = "Мультиагентная система генерации образовательного контента из проверенных источников"
requires-python = ">=3.11"

# Зависимости MVP. Каркас запускается уже на этих пакетах (mock-режим).
dependencies = [
    "pyyaml>=6.0",      # чтение профилей аудитории (config/audiences/*.yaml)
    "requests>=2.31",   # адаптеры Yandex (REST API)
    "numpy>=1.26",      # косинусный поиск в in-memory хранилище
    "langgraph>=0.2",   # оркестрация конвейера агентов (граф состояния)
    "langchain-core>=0.3",  # базовые типы LangChain (нужны LangGraph)
]

[project.optional-dependencies]
# Дэш ставится отдельно: он не нужен для запуска из CLI.
dashboard = ["streamlit>=1.30"]
# Реальные источники-форматы (точки расширения).
sources = ["pymupdf>=1.24", "trafilatura>=1.6"]
# Трассировка прогонов в LangSmith (необязательно).
tracing = ["langsmith>=0.1"]
# RAG на стеке LangChain + FAISS (вместо in-memory). Включается RAG_BACKEND=faiss.
rag = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "faiss-cpu>=1.8",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_agents"]
